[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
    {name = "wben-far", email = "wben-far@student.42.fr"}
]
license = {text = "MIT"}
urls = {"Homepage" = "https://github.com/wben-far/ft_package"}
